# rp_project

./: .gitignore  CMakeLists.txt  README.md  package.xml
exec/: CMakeLists.txt  my_ros_publisher.cpp  prova.cpp  prova_ros.cpp  prova_sdl.cpp  sim2d.cpp
maps/: README.md  aula41.yaml
sim2d/: CMakeLists.txt  gui.h  laser.h  map.h  robot.h  static_vec.h  world.h
sim2d/src/: gui.cpp  laser.cpp  map.cpp  robot.cpp  world.cpp
sim2d_ros/: CMakeLists.txt  map_ros.h  world_ros.h
sim2d_ros/src/: map_ros.cpp  world_ros.cpp
