<?xml version="1.0"?>
<package format="2">
  <name>rp_project</name>
  <version>0.0.0</version>
  <description>2d robot simulator</description>

  <maintainer email="fabioscap@todo.todo">fabioscap</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
